--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*Dichiariamo e assegnaimo le vairabili di base, come i colori dei testi e la velocitá delle trasazioni.
+facciamo tutto nel root cosí che basta cambiare solo una sola proprietá e non tutte*/
 :root {
     font-size: 15px;
     font-family: 'Trebuchet MS', sans-serif;
@@ -15,6 +17,7 @@ body {
     padding: 0;
 }
 
+/*In teoria questa parte dovrebbe modificare l'aspetto della scrollbar, peró non funziona ancora*/
 body::-webkit-scrollbar {
     width: 0.25rem;
 }
@@ -32,28 +35,34 @@ main {
     padding: 1rem;
 }
 
+/*Navigation bar*/
 .navbar {
     top: 0;
     width: 5rem;
     height: 100vh;
-
-    position: fixed;
+    position: fixed; /*Per rimanere sempre a destra anque quando si scrolla sotto*/
     background-color: var(--gb-primary);
-    transition: width 300ms ease;
+    transition: width 300ms ease; /*Animazione del apertura della navigation bar*/
 }
 
+.navbar:hover {
+    width: 16rem;
+}
+
+/*Elementi della navigation bar*/
 .navbar-nav {
     list-style: none;
     padding: 0;
     margin: 0;
+    /*Creiamo una flexbox, che conterra gli elementi della navigation bar*/
     display: flex;
-    flex-direction: column;
+    flex-direction: column; /*Di base gli elementi vanno in riga, ma dato che vogliamo la nostra barra a sinistra, lo impostiamo a colonne.*/
     align-items: center;
 }
-
+/*Per non mostrare gli elementi della navigation bar prima che finisca l'animazione, impostiamo overflow: hidden*/
 .nav-item {
     width: 100%;
-    overflow: hidden
+    overflow: hidden;
 }
 
 .logo {
@@ -67,16 +76,16 @@ main {
     letter-spacing: 0.3ch;
     width: 100%;
     overflow: hidden;
-
 }
 
+/*Animazione rotazione prima icona*/
 .logo svg {
     transform: rotate(0deg);
     transition: transform var(--transition-speed);
 }
 
 .navbar:hover .logo svg {
-    transform: rotate(-180deg);
+    transform: rotate(-180deg);/*Quando passiamo il mouse sopra la barra di navigazione ruotiamo l'icona di -180 gradi*/
 }
 
 .nav-icon {
@@ -89,15 +98,12 @@ main {
     filter: grayscale(100%) opacity(0.7);
     transition: var(--transition-speed);
 }
-
+/*Animazione icone*/
+/*Ogni volta che passiamo il mouse su un icona o testo, riuduciamo l'effetto grayscale a 0, mostrando cosí il colore del icona*/
 .nav-icon:hover, .nav-link a:hover {
     filter: grayscale(0%) opacity(1);
     background: var(--gb-secondary);
     color: var(--text-secondary);
-}
-
-.navbar:hover {
-    width: 16rem;
 }
 
 .icon-text {
@@ -116,7 +122,7 @@ main {
     margin: 0 1.25rem;
     font-size: 2rem;
 }
-
+/*Colore icone*/
 .fa-primary,
 .fa-solid {
     color: rgb(116, 255, 135);
@@ -128,10 +134,13 @@ main {
 
 .fa-primary,
 .fa-secondary {
-    transition: var(--transition-speed);
+    transition: var(--transition-speed); /*Velocitá animazione effeto grayscale*/
 }
-/*dropdown*/
+
+
+/*Dropdown menu*/
 /*Qua iniziano i problemi*/
+/*Impostiamo l'altezza del dropdown a 0px, cosí che l'animazione ha da dove partire*/
 .nav-link {
     height: 0px;
     transition: height 1s ease;
@@ -139,30 +148,25 @@ main {
 
 .nav-link a {
     text-align: center;
-    display: block;
+    display: block; /*Impostiamo display: block per avere ogni link su una riga diversa*/
     color: var(--text-primary);
     text-decoration: none;
-    filter: grayscale(100%) opacity(0.7);
-    transition: var(--transition-speed);
+    filter: grayscale(100%) opacity(0.7); 
     padding: 0px;
-    overflow: hidden;
-
+    overflow: hidden; /*Rendiamo non visibile il testo per non vederlo quando non si ha il mouse sul icona*/
+    visibility: hidden;
+    opacity: 0;
+    height: 0px; 
+    /*Velocitá animazioni*/
+    transition: visibility 0s, opacity var(--transition-speed) linear, height var(--transition-speed), padding var(--transition-speed), grayscale var(--transition-speed) ;
 }
-
+/*Quando passiamo il mouse su un icona, il dropdown menu torna alla sua altezza originale*/
 .nav-icon:hover+.nav-link,
 .nav-link:hover {
     display: block;
     height: max-content;
 }
-
-div a {
-    visibility: hidden;
-    opacity: 0;
-    height: 0px;
-    transition: visibility 0s, opacity var(--transition-speed) linear, height var(--transition-speed), padding var(--transition-speed) ;
-
-  }
-  
+/*Quando passiamo il mouse su un icona, i link del dropdown menu torna alla sua altezza originale e si rende visibile*/
   .nav-icon:hover+.nav-link a,
   .nav-link:hover a
   {
@@ -172,11 +176,13 @@ div a {
     padding: 10px;
   }
 
+/*Contenuto pagina*/
 h1{
     text-align: center;
 }
 
-/*mobile ecc*/
+/* DA IMPLEMENTARE*/
+/*Mobile ecc, per rendere la barra adatta ai dispositivi mobile*/
 /*
 @media only screen and (max-width: 600px) {
     .navbar {
