Background animato e auto tema
Background animato con cambiamento automatico del tema del sito.

--- a/style.css
+++ b/style.css
@@ -1,21 +1,55 @@
 /*Dichiariamo e assegnaimo le vairabili di base, come i colori dei testi e la velocitá delle trasazioni.
 facciamo tutto nel root cosí che basta cambiare solo una sola proprietá e non tutte*/
+@media (prefers-color-scheme: light) 
+{
+    :root {
+        --text-primary: rgb(58, 58, 58);
+        --text-secondary: rgb(0, 0, 0);
+        --icon-primary: rgb(116, 255, 135);
+        --icon-secondary: rgb(0, 158, 124);
+        --gb-primary: #f5f5f5;
+        --gb-secondary: #afafaf;
+    }
+    body {
+        color: black;
+        background-color: white;
+        margin: 0;
+        padding: 0;
+        background: url(backgroud-white.svg);
+    }
+    .nav-icon {
+        filter: grayscale(100%) opacity(1);
+    }
+}
+
+@media (prefers-color-scheme: dark)
+{
+    :root {
+        --text-primary: rgb(78, 78, 78);
+        --text-secondary: white;
+        --icon-primary: rgb(116, 255, 135);
+        --icon-secondary: rgb(0, 158, 124);
+        --gb-primary: #23232e;
+        --gb-secondary: #141418;
+    }
+    body {
+        color: rgb(255, 255, 255);
+        background-color: white;
+        margin: 0;
+        padding: 0;
+        background: url(backgroud-dark.svg);
+    }
+    .nav-icon {
+        filter: grayscale(100%) opacity(0.7);
+    }
+}
 :root {
     font-size: 15px;
     font-family: 'Trebuchet MS', sans-serif;
-    --text-primary: gray;
-    --text-secondary: white;
-    --gb-primary: #23232e;
-    --gb-secondary: #141418;
     --transition-speed: 600ms;
+    --background-color: black;
 }
 
-body {
-    color: black;
-    background-color: white;
-    margin: 0;
-    padding: 0;
-}
 
 /*In teoria questa parte dovrebbe modificare l'aspetto della scrollbar, peró non funziona ancora*/
 body::-webkit-scrollbar {
@@ -95,7 +129,6 @@ main {
     height: 5rem;
     color: var(--text-primary);
     text-decoration: none;
-    filter: grayscale(100%) opacity(0.7);
     transition: var(--transition-speed);
 }
 /*Animazione icone*/
@@ -125,11 +158,11 @@ main {
 /*Colore icone*/
 .fa-primary,
 .fa-solid {
-    color: rgb(116, 255, 135);
+    color: var(--icon-primary);
 }
 
 .fa-secondary {
-    color: rgb(0, 158, 124);
+    color: var(--icon-secondary);
 }
 
 .fa-primary,
@@ -142,7 +175,7 @@ main {
 /*Qua iniziano i problemi*/
 /*Impostiamo l'altezza del dropdown a 0px, cosí che l'animazione ha da dove partire*/
 .nav-link {
-    height: 0px;
+    height: 0;
     transition: height 1s ease;
 }
 
@@ -152,11 +185,11 @@ main {
     color: var(--text-primary);
     text-decoration: none;
     filter: grayscale(100%) opacity(0.7); 
-    padding: 0px;
+    padding: 0;
     overflow: hidden; /*Rendiamo non visibile il testo per non vederlo quando non si ha il mouse sul icona*/
     visibility: hidden;
     opacity: 0;
-    height: 0px; 
+    height: 0; 
     /*Velocitá animazioni*/
     transition: visibility 0s, opacity var(--transition-speed) linear, height var(--transition-speed), padding var(--transition-speed), grayscale var(--transition-speed) ;
 }
