--- a/style.css
+++ b/style.css
@@ -4,17 +4,11 @@ facciamo tutto nel root cosí che basta cambiare solo una sola proprietá e non 
     :root {
         --text-primary: rgb(58, 58, 58);
         --text-secondary: rgb(0, 0, 0);
-        --icon-primary: rgb(107, 235, 124);
-        --icon-secondary: rgb(0, 158, 124);
-        --gb-primary: #f5f5f5;
-        --gb-secondary: #afafaf;
+        --bg-primary: #f5f5f5;
+        --bg-secondary: #afafaf;
     }
 
     body {
-        color: black;
-        background-color: white;
-        margin: 0;
-        padding: 0;
         background: url(backgroud-white.svg);
     }
 
@@ -27,17 +21,11 @@ facciamo tutto nel root cosí che basta cambiare solo una sola proprietá e non 
     :root {
         --text-primary: rgb(185, 185, 185);
         --text-secondary: white;
-        --icon-primary: rgb(116, 255, 135);
-        --icon-secondary: rgb(0, 158, 124);
-        --gb-primary: #23232e;
-        --gb-secondary: #141418;
+        --bg-primary: #23232e;
+        --bg-secondary: #141418;
     }
 
     body {
-        color: rgb(255, 255, 255);
-        background-color: white;
-        margin: 0;
-        padding: 0;
         background: url(backgroud-dark.svg);
     }
 
@@ -50,20 +38,27 @@ facciamo tutto nel root cosí che basta cambiare solo una sola proprietá e non 
     font-size: 16px;
     font-family: arial, sans-serif;
     --transition-speed: 600ms;
-    --background-color: black;
+    --icon-primary: rgb(116, 255, 135);
+    --icon-secondary: rgb(0, 158, 124);
 }
 
+body{
+    color: var(--text-secondary);
+    background-color: var(--bg-primary);
+    margin: 0;
+    padding: 0;
+}
 /*In teoria questa parte dovrebbe modificare l'aspetto della scrollbar, peró non funziona ancora*/
 body::-webkit-scrollbar {
     width: 0.25rem;
 }
 
 body::-webkit-scrollbar-track {
-    background: var(--gb-primary);
+    background: var(--bg-primary);
 }
 
 body::-webkit-scrollbar-thumb {
-    background: var(--gb-secondary);
+    background: var(--bg-secondary);
 }
 
 main {
@@ -74,18 +69,11 @@ main {
 
 /*Navigation bar*/
 .navbar {
-    top: 0;
-    width: 5rem;
-    height: 100vh;
     position: fixed;
     /*Per rimanere sempre a destra anque quando si scrolla sotto*/
-    background-color: var(--gb-primary);
+    background-color: var(--bg-primary);
     transition: width 300ms ease;
     /*Animazione del apertura della navigation bar*/
-}
-
-.navbar:hover {
-    width: 16rem;
 }
 
 /*Elementi della navigation bar*/
@@ -108,12 +96,7 @@ main {
 
 .logo {
     font-weight: bold;
-    text-transform: uppercase;
-    text-align: center;
     color: var(--text-secondary);
-    background: var(--gb-secondary);
-    font-size: 1rem;
-    text-transform: uppercase;
     letter-spacing: 0.3ch;
     width: 100%;
     overflow: hidden;
@@ -145,18 +128,13 @@ main {
 .nav-icon:hover,
 .nav-link a:hover {
     filter: grayscale(0%) opacity(1);
-    background: var(--gb-secondary);
+    background: var(--bg-secondary);
     color: var(--text-secondary);
 }
 
 .icon-text {
     display: none;
     margin-left: 1rem;
-}
-
-.navbar:hover .icon-text {
-    display: inline;
-    transition: opacity var(--transition-speed);
 }
 
 .nav-icon svg,
@@ -236,7 +214,7 @@ main {
     0% {
         transform: translateX(70%);
         opacity: 0;
-        
+  
     }
     90%{
         transform: translateX(0);
@@ -261,10 +239,10 @@ main {
 
 /* DA IMPLEMENTARE*/
 /*Mobile ecc, per rendere la barra adatta ai dispositivi mobile*/
-/*
+
 @media only screen and (max-width: 600px) {
     .navbar {
-        bottom: 0;
+        /*bottom: 0;*/
         width: 100vw;
         height: 5rem;
     }
@@ -284,7 +262,6 @@ main {
 
 @media only screen and (min-width: 600px) {
     .navbar {
-        top: 0;
         width: 5rem;
         height: 100vh;
     }
@@ -298,4 +275,3 @@ main {
         transition: opacity var(--transition-speed);
     }
 }
-*/
