--- a/style.css
+++ b/style.css
@@ -61,45 +61,13 @@ body::-webkit-scrollbar-thumb {
     background: var(--bg-secondary);
 }
 
-main {
-    margin-left: 5rem;
-    padding: 1rem;
-    margin-right: 10%;
-}
-
 /*Navigation bar*/
 .navbar {
     position: fixed;
     /*Per rimanere sempre a destra anque quando si scrolla sotto*/
     background-color: var(--bg-primary);
     transition: width 300ms ease;
-    /*Animazione del apertura della navigation bar*/
-}
-
-/*Elementi della navigation bar*/
-.navbar-nav {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    /*Creiamo una flexbox, che conterra gli elementi della navigation bar*/
-    display: flex;
-    flex-direction: column;
-    /*Di base gli elementi vanno in riga, ma dato che vogliamo la nostra barra a sinistra, lo impostiamo a colonne.*/
-    align-items: center;
-}
-
-/*Per non mostrare gli elementi della navigation bar prima che finisca l'animazione, impostiamo overflow: hidden*/
-.nav-item {
-    width: 100%;
-    overflow: hidden;
-}
-
-.logo {
-    font-weight: bold;
-    color: var(--text-secondary);
-    letter-spacing: 0.3ch;
-    width: 100%;
-    overflow: hidden;
+    animation: 1s ease-out 0s 1 slidedestra;
 }
 
 /*Animazione rotazione prima icona*/
@@ -107,10 +75,19 @@ main {
     transform: rotate(0deg);
     transition: transform var(--transition-speed);
 }
+/*Elementi della navigation bar*/
+.navbar-nav {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    /*Creiamo una flexbox, che conterra gli elementi della navigation bar*/
+    display: flex;
+}
 
-.navbar:hover .logo svg {
-    transform: rotate(-180deg);
-    /*Quando passiamo il mouse sopra la barra di navigazione ruotiamo l'icona di -180 gradi*/
+/*Per non mostrare gli elementi della navigation bar prima che finisca l'animazione, impostiamo overflow: hidden*/
+.nav-item {
+    width: 100%;
+    overflow: hidden;
 }
 
 .nav-icon {
@@ -203,14 +180,16 @@ main {
     padding: 10px;
 }
 
-/*Contenuto pagina*/
-.titolo {
-    text-align: right;
-    font-size: 5vw;
-    animation: 1s ease-out 0s 1 slidedestra;
+main {
+    padding: 1rem;
+    display: flex;
+    flex-direction:column;
 }
 
-@keyframes slidedestra {
+/*Contenuto pagina*/
+
+
+@keyframes slidesinistra {
     0% {
         transform: translateX(70%);
         opacity: 0;
@@ -224,8 +203,20 @@ main {
     }
 }
 
+@keyframes slidedestra {
+    0% {
+        transform: translateX(-70%);
+        opacity: 0;
+    }
+    90%{
+        transform: translateX(0);
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 .bottone {
-    float: right;
     font-size: 2.5vw;
     padding: 10px 20px;
     border: 1px solid;
@@ -241,26 +232,53 @@ main {
 /*Mobile ecc, per rendere la barra adatta ai dispositivi mobile*/
 
 @media only screen and (max-width: 600px) {
+    .navbar:hover .logo svg {
+        transform: rotate(90deg);
+        /*Quando passiamo il mouse sopra la barra di navigazione ruotiamo l'icona di -180 gradi*/
+    }
     .navbar {
-        /*bottom: 0;*/
-        width: 100vw;
+        top: 0;
+        width: 100%;
         height: 5rem;
+    }
+
+    .navbar:hover {
+        height: auto;
     }
 
     .navbar-nav {
         flex-direction: row;
     }
 
-    .nav-link {
+    .nav-icon {
         justify-content: center;
     }
 
     main {
-        margin: 0;
+        margin-top: 5rem;
+        align-items: center;    
+    }
+
+    .titolo {
+        font-size: 8vw;
+        animation: 1s ease-out 0s 1 slidesinistra;
     }
 }
 
 @media only screen and (min-width: 600px) {
+     .logo {
+        font-weight: bold;
+        color: var(--text-secondary);
+        letter-spacing: 0.3ch;
+        width: 100%;
+        overflow: hidden;
+    }
+    
+    .navbar:hover .logo svg {
+        transform: rotate(-180deg);
+        /*Quando passiamo il mouse sopra la barra di navigazione ruotiamo l'icona di -180 gradi*/
+    }
+    
     .navbar {
         width: 5rem;
         height: 100vh;
@@ -272,6 +290,24 @@ main {
 
     .navbar:hover .icon-text {
         display: inline;
-        transition: opacity var(--transition-speed);
+        transition: opacity var(--transition-speed); 
     }
+
+    .navbar-nav {
+        /*Di base gli elementi vanno in riga, ma dato che vogliamo la nostra barra a sinistra, lo impostiamo a colonne.*/
+        flex-direction: column;
+        align-items: center;
+    }
+
+    main {
+        align-items: flex-end;    
+        margin-left: 5rem;
+        margin-right: 10%;
+    }
+
+    .titolo {
+        font-size: 5vw;
+        animation: 1s ease-out 0s 1 slidesinistra;
+    }
+
 }
