--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -1,3 +1,12 @@
+/*In base alla garndezza dello schermo visualizziamo due elementi sulla stessa riga*/
+@media only screen and (min-width: 900px){
+    .esempi{
+        display: inline-grid; /*Creiamo una griglia con 2 colonne di grandezza automatica e uno spazzio tra loro di 8%*/
+        grid-template-columns: auto auto;
+        gap: 8%;
+    }
+}
+/*Proprietá esempi*/
 .floatr {
     float: right;
     width: 170px;
@@ -32,10 +41,3 @@
     text-align: center;
 }
 
-@media only screen and (min-width: 900px){
-    .esempi{
-        display: inline-grid;
-        grid-template-columns: auto auto;
-        gap: 8%;
-    }
-}
