--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
-/*Dichiariamo e assegnaimo le vairabili di base, come i colori dei testi e la velocitá delle trasazioni.
-facciamo tutto nel root cosí che basta cambiare solo una sola proprietá e non manualmente tutte*/
-/*CSS ci permette di identificare il tema utilizzato dal utente su windows, cosí che possiamo cambiare colori per stare a tema*/
+/*Dichiariamo e assegniamo le variabili di base, come i colori dei testi e la velocità delle transizioni
+facciamo tutto nel root così che basta cambiare solo una sola proprietà e non manualmente tutte*/
+/*CSS ci permette d'identificare il tema utilizzato dal utente su Windows, così che possiamo cambiare colori per stare a tema (contributo di Alessando Porpigiglia)*/
 @media (prefers-color-scheme: light) {
     /*Variabili per i colori principali*/
     :root {
@@ -9,7 +9,7 @@ facciamo tutto nel root cosí che basta cambiare solo una sola proprietá e non 
         --background1: #f5f5f5;
         --background2: #afafaf;
     }
-    /*Impostiamo un svg animato come backgroud a tema chiaro*/
+    /*Impostiamo un SVG animato come background a tema chiaro*/
     body {
         background: url(../IMAGES/backgroud-chiaro.svg);
     }
@@ -23,7 +23,7 @@ facciamo tutto nel root cosí che basta cambiare solo una sola proprietá e non 
         --background1: #23232e;
         --background2: #141418;
     }
-    /*Impostiamo un svg animato come backgroud a tema scuro*/
+    /*Impostiamo un SVG animato come background a tema scuro*/
     body {
         background: url(../IMAGES/backgroud-scuro.svg);
     }
@@ -38,14 +38,14 @@ facciamo tutto nel root cosí che basta cambiare solo una sola proprietá e non 
 }
 
 body{
-    color: var(--testo2); /*Con var(--nome-variabile) possiamo inserire un valore prima assegnato in una proprietá*/
+    color: var(--testo2); /*Con var(--nome-variabile) possiamo inserire un valore prima assegnato in una proprietà*/
     background-color: var(--background1);
     margin: 0; /*Per non avere uno bordo attorno alla pagina impostiamo margin e padding a 0*/
     padding: 0;
 }
 
-/*Con l'estensione -webkit possiamo cabiare certe proprietá della pagina, in questo caso:*/
-/*Colore backgroud scrollbar*/
+/*Con l'estensione -webkit possiamo cambiare certe proprietà della pagina, in questo caso:*/
+/*Colore background scrollbar*/
 body::-webkit-scrollbar-track {
     background: var(--background1);
 }
@@ -56,7 +56,7 @@ body::-webkit-scrollbar-thumb {
 
 /*Navigation bar*/
 .navbar {
-    position: fixed;    /*Per rimanere sempre a destra anque quando si scrolla sotto*/
+    position: fixed;    /*Per rimanere sempre a destra anche quando si scrolla sotto*/
     background-color: var(--background1);
     transition: width 300ms ease;
     animation: 1s ease-out 0s 1 slidedestra; /*Avviamo l'animazione al caricamento della pagina*/
@@ -65,7 +65,7 @@ body::-webkit-scrollbar-thumb {
 /*Impostiamo i valori base per l'animazione di rotazione della prima icona*/
 .logo svg {
     transform: rotate(0deg);
-    transition: transform var(--velocitá-transizioni); /*Impostiamo la velocitá della transizione da 0 gradi a x gradi(varia in base al dispositivo usato)*/
+    transition: transform var(--velocitá-transizioni); /*Impostiamo la velocità della transizione da 0 gradi a x gradi(varia in base al dispositivo usato)*/
 }
 
 /*Elementi della navigation bar*/
@@ -73,7 +73,7 @@ body::-webkit-scrollbar-thumb {
     list-style: none;
     padding: 0;
     margin: 0;
-    display: flex;    /*Creiamo una flexbox, che conterra gli elementi della navigation bar*/
+    display: flex;    /*Creiamo una flexbox, che conterà gli elementi della navigation bar*/
 }
 .elemento-nav {
     width: 100%;
@@ -92,14 +92,14 @@ body::-webkit-scrollbar-thumb {
 }
 
 /*Animazione icone*/
-/*Ogni volta che passiamo il mouse su un icona o testo, riuduciamo l'effetto grayscale a 0, mostrando cosí il colore del icona*/
+/*Ogni volta che passiamo il mouse su un icona o testo, riduciamo l'effetto grayscale a 0, mostrando cosí un altro colore*/
 .nav-icona:hover,
 .nav-link a:hover {
     filter: grayscale(0%) opacity(1);
     background: var(--background2);
     color: var(--testo2);
 }
-/*Come con la prima icona, impostiamo i valori base del testo, cosí possimao fare una transizione*/
+/*Come con la prima icona, impostiamo i valori base del testo, così possiamo fare una transizione*/
 .testo-icona {
     display: none;
     margin-left: 1rem;
@@ -143,7 +143,7 @@ body::-webkit-scrollbar-thumb {
     filter: grayscale(100%) opacity(0.7);
     padding: 0;
     overflow: hidden;
-    visibility: hidden;    /*Rendiamo non visibile il testo per non vederlo quando non si ha il mouse sul icona*/
+    visibility: hidden;    /*Rendiamo non visibile il testo per non vederlo quando non si ha il mouse sull'icona*/
     opacity: 0;
     height: 0;
     /*Velocitá animazioni*/
@@ -202,13 +202,15 @@ main {
 }
 /*Contenuto pagina*/
 .titolo {
-    font-size: clamp(2rem, 5vw, 4rem); /*Possiamo rendere la grandezza del testo dinamica, ingrandendosi in base alla larghezza della pagina, impostando anche un valore minimo e uno massimo.*/
+    font-size: clamp(2rem, 5vw, 4rem); /*Possiamo rendere la grandezza del testo dinamica, ingrandendosi in base alla larghezza della pagina, impostando anche un valore minimo e uno massimo*/
     animation: 1s ease-out 0s 1 comparsa;
 }
 .sottotit{
     font-size: clamp(1rem, 1.5vw, 2rem); 
 }
 .bottone {
+    color: var(--testo2);
+    text-decoration: none;
     font-size: clamp(1.2rem, 2.5vw, 2rem);
     padding: 10px 20px;
     border: 1px solid;
@@ -226,7 +228,7 @@ main {
         /*Quando passiamo il mouse sopra la barra di navigazione ruotiamo l'icona di -180 gradi*/
     }
     .navbar {
-        top: 0; /*Specichiamo la posizione verticale del elemento, in questo caso attaccato alla parte superiore dello schermo*/
+        top: 0; /*Specifichiamo la posizione verticale del elemento, in questo caso attaccato alla parte superiore dello schermo*/
         width: 100%;
         height: 5rem;
     }
@@ -234,10 +236,10 @@ main {
         height: auto;
     }
     .navbar-nav {
-        flex-direction: row; /*A differenza della verisone desktop impostiamo gli elementi della flexbox in riga*/
+        flex-direction: row; /*A differenza della versione desktop impostiamo gli elementi della flexbox in riga*/
     }
     .nav-icona {
-        justify-content: center; /*Centraimo gli elementi della flexbox*/
+        justify-content: center; /*Centriamo gli elementi della flexbox*/
     }
 
     main {
