--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -1,7 +1,7 @@
 .esempi{
     display: inline-grid; /*Creiamo una griglia con colonne automatiche in base alla grandezza dello schermo*/
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
-    width: 100%;
+    grid-template-columns: repeat(auto-fit, 250px); 
+    width: 100%; 
     justify-items: center; /*Centraimao gli esemmpi alla griglia*/
 }
 /*Proprietá esempi*/
